--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://madisonestabrook.github.io/reactnd-project-myreads-starter/",
+  "homepage": "https://madisonestabrook.github.io/reactnd-project-myreads-starter/public/index.html",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "prop-types": "^15.6.1",
